--- a/game-client/package.json
+++ b/game-client/package.json
@@ -9,6 +9,7 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@types/node": "^20.10.8",
 		"@typescript-eslint/eslint-plugin": "^6.17.0",
 		"@typescript-eslint/parser": "^6.17.0",
 		"eslint": "^8.56.0",
@@ -16,7 +17,7 @@
 		"vite": "^5.0.11"
 	},
 	"dependencies": {
-		"phaser": "^3.60.0",
-    "colyseus.js": "^0.15.15"
+		"colyseus.js": "^0.15.15",
+		"phaser": "^3.60.0"
 	}
 }
