--- a/game-client/package.json
+++ b/game-client/package.json
@@ -10,14 +10,23 @@
 	},
 	"devDependencies": {
 		"@types/node": "^20.10.8",
+		"@types/react": "^18.2.47",
+		"@types/react-dom": "^18.2.18",
 		"@typescript-eslint/eslint-plugin": "^6.17.0",
 		"@typescript-eslint/parser": "^6.17.0",
+		"@vitejs/plugin-react": "^4.2.1",
 		"eslint": "^8.56.0",
+		"sass": "^1.69.7",
 		"typescript": "^5.0.3",
-		"vite": "^5.0.11"
+		"vite": "^5.0.11",
+		"vite-tsconfig-paths": "^4.2.3"
 	},
 	"dependencies": {
+		"antd": "^5.12.8",
 		"colyseus.js": "^0.15.15",
-		"phaser": "^3.60.0"
+		"phaser": "^3.60.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"styled-components": "^6.1.8"
 	}
 }
